fixed flag badge text alignment in page headers

--- a/app/assets/stylesheets/flags.scss
+++ b/app/assets/stylesheets/flags.scss
@@ -2,3 +2,14 @@
   display: flex;
   justify-content: space-between;
 }
+
+.header {
+  .header--menu {
+    .header--item {
+      .header--alert {
+        min-width: 2em;
+        padding: 0 0.5em;
+      }
+    }
+  }
+}
